<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:scrollbars="none">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dialog_padding"
        android:layout_marginRight="@dimen/dialog_padding"
        android:background="@drawable/add_lable_dialog_shape"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="30dp"
            android:background="@mipmap/head_error"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/color_000000"
            android:textSize="18sp"
            android:text="@string/note"/>
        <TextView
            android:id="@+id/leave_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:gravity="center"
            android:textColor="@color/color_000000"
            android:textSize="13sp"
            android:text="@string/leave_this_page"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="30dp"
            android:background="@mipmap/link"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:layout_weight="1">
            <TextView
                android:id="@+id/cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="@color/color_app_theme"
                android:text="@string/cancel"
                />
            <TextView
                android:id="@+id/ok"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/ok"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="@color/color_app_theme"
                android:layout_weight="0.5"
                />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>




