<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:scrollbars="none">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dialog_padding"
        android:layout_marginRight="@dimen/dialog_padding"

        android:background="@drawable/add_lable_dialog_shape"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <RelativeLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            >
            <ImageView
                android:id="@+id/image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:gravity="center"
                android:textSize="15sp"
                android:background="@mipmap/rewards_note"
                android:textColor="@color/color_000000"/>
            <com.food.iotsensor.ViewUtility.FontTextView
                android:layout_width="wrap_content"
                typefaceName="vagroundedbt"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:text="@string/note"
                android:layout_below="@+id/image"
                android:textSize="18sp"
                android:textColor="@color/color_fd534d"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/china"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            >
            <TextView
                android:id="@+id/redeem_connent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rewards_note_connent"
                android:gravity="center"
                android:textSize="15sp"
                android:textColor="@color/color_000000"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/redeem_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/rewards_note_second_connent"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:textSize="15sp"
                android:layout_centerHorizontal="true"
                android:textColor="@color/color_app_theme"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/redeem_cancel"
            android:layout_width="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:layout_height="wrap_content">
            <com.food.iotsensor.ViewUtility.FontTextView
                android:layout_width="match_parent"
                android:layout_height="45dp"
                typefaceName="vagroundedbt"
                android:text="@string/ok"
                android:textSize="16sp"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:id="@+id/rewards_ok_button"
                android:stateListAnimator="@null"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/round_end_button"
                />
        </RelativeLayout>


    </LinearLayout>

</RelativeLayout>




