<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:scrollbars="none">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dialog_padding"
        android:layout_marginRight="@dimen/dialog_padding"
        android:background="@drawable/add_lable_dialog_shape"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">



        <RelativeLayout
            android:id="@+id/china"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:layout_marginTop="40dp"
            android:gravity="center"
            >
            <TextView
                android:id="@+id/redeem_connent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/oops_content1"
                android:gravity="center"
                android:textSize="15sp"
                android:textColor="@color/color_000000"/>

        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="40dp"
            android:background="@mipmap/link" />
        <RelativeLayout
            android:id="@+id/redeem_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/ok_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/want_to_redeem"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:textSize="13sp"
                android:layout_centerHorizontal="true"
                android:textColor="@color/color_app_theme"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@mipmap/link" />
        <RelativeLayout
            android:id="@+id/redeem_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/cancel_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/cancel"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:textSize="13sp"
                android:layout_centerHorizontal="true"
                />
        </RelativeLayout>


    </LinearLayout>

</RelativeLayout>




