<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:scrollbars="none">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dialog_padding"
        android:layout_marginRight="@dimen/dialog_padding"
        android:background="@drawable/add_lable_dialog_shape"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <RelativeLayout
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:paddingRight="15dp"
            android:paddingLeft="15dp"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/note_service_transfer_confirm_pin"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textColor="@color/color_000000"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/china"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="20dp"
            android:paddingLeft="20dp"
            android:gravity="center"
            >
            <EditText
                android:id="@+id/pin_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:background="@color/colorWhite"
                android:digits="0123456789"
                android:hint="XXXXXX"
                android:maxLength="6"
                android:inputType="numberPassword"
                android:textSize="15sp" />

        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@mipmap/link" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/cancel_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/cancel"
                android:textSize="18sp"
                android:padding="13dp"
                android:layout_centerHorizontal="true"
                android:textColor="@color/color_app_theme"/>
            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@mipmap/link" />
            <TextView
                android:id="@+id/ok_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/ok"
                android:padding="13dp"
                android:textSize="18sp"
                android:layout_alignRight="@+id/cancel_button"
                android:layout_centerHorizontal="true"
                android:textColor="@color/color_app_theme"/>
        </LinearLayout>


    </LinearLayout>

</RelativeLayout>




