<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="none">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/body"
        android:layout_width="match_parent"

        android:layout_height="match_parent"
        android:orientation="vertical"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dialog_padding"
            android:layout_marginRight="@dimen/dialog_padding"
            android:background="@drawable/add_lable_dialog_shape"
            android:gravity="center"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/oops"
                    android:textColor="@color/color_000000"
                    android:textSize="15sp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/malaysia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <TextView
                    android:id="@+id/oop_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/oops_content"
                    android:textColor="@color/color_000000"
                    android:textSize="13sp" />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:background="@color/colorWhite" />

            <RelativeLayout
                android:id="@+id/china"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <TextView
                    android:id="@+id/oop_second_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/oops_content1"
                    android:textColor="@color/color_000000"
                    android:textSize="13sp" />

            </RelativeLayout>

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp"
                android:background="@mipmap/oops" />
        </LinearLayout>

    </RelativeLayout>
</RelativeLayout>




